# ai-rag-project

./: .gitignore  .trivyignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  GITOPS_CLAUDE.md  NEW_PRD.md  PRD.md  README.md  docker-compose.yml  sonar-project.properties  test_e2e.sh
.agents/plans/: nextjs-frontend-redesign.md  phase-1-project-scaffold.md  phase-2-data-ingestion.md  phase-3-auth-rbac.md  phase-4-gitops-cicd.md  phase-4-rag-pipeline.md  phase-5-react-frontend.md  phase-6-evaluation.md  phase-7-reranking.md
.claude/commands/: commit.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  promote-prod.yml
backend/: .coverage  .env.example  coverage.xml  pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: models.py  router.py  service.py
backend/app/chat/: rag_service.py  router.py
backend/app/guardrails/: __init__.py  context_guards.py  input_guards.py  models.py  output_guards.py  runner.py
backend/app/rbac/: permissions.py
backend/app/vector_store/: pinecone_client.py
backend/ingestion/: chunker.py  evaluate.py  ingest.py  loaders.py
backend/tests/: conftest.py  test_auth.py  test_guardrails.py  test_rag_service.py  test_rbac.py  test_routes.py  test_vector_store.py
frontend/: package-lock.json
frontend-next/: next.config.ts  package-lock.json  package.json
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: MessageBubble.tsx  RoleBadge.tsx  SourceCitation.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend-next/lib/: apiClient.ts  constants.ts
frontend-next/stores/: authStore.ts  chatStore.ts
frontend-next/types/: api.ts
frontend/src/: App.test.tsx  App.tsx
(+11 files in other folders)
